# nbody-simulation

./: .clang-format  .cz.toml  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  balanced.json  compile_commands.json  config.json  install_axolote.sh
config/: balanced.json  galaxy.json  galaxy_collision.json  galaxy_collision1.json  shuriken.json  three-bodies.json  unbalanced.json
docs/: diagram.puml
include/: app.hpp  celestial_body.hpp  celestial_body_system.hpp  constants.hpp  octree.hpp  solar_system.hpp  sphere.hpp
resources/shaders/: def_fragment_shader.glsl  def_grid_fragment_shader.glsl  def_grid_vertex_shader.glsl  def_vertex_shader.glsl  fragment_shader.glsl  gmesh_base_fragment_shader.glsl  gmesh_base_vertex_shader.glsl  instanced_vertex_shader.glsl  object3d_base_fragment_shader.glsl  object3d_base_vertex_shader.glsl  vertex_shader.glsl
scripts/: binarygenerator.py  config_generator.py  galaxygenerator.py  vec.py
src/: app.cpp  celestial_body.cpp  celestial_body_system.cpp  main.cpp  octree.cpp  solar_system.cpp  sphere.cpp
src/glad/: glad.c
